2005-12-10 nowel <nowel@xole.net>

    * PHP Archive Task を修正しました。
        付属のbuild.xmlを参考にしてください。

2005-12-09 nowel <nowel@xole.net>

    * Phing PHP Archive Task
        PHP Archive(phar) 化を行う Phing Task を作成しました。

2005-12-07 nowel <nowel@xole.net>

================ S2Dao.PHP5-1.0.0-beta2 更新履歴 ===================

    * PDO に対応しました。
        S2Dao.PHP5-1.0.0-beta2 が対応している DBMS は以下の通りです。
        - MySQL(mysql)
        - SQLite(sqlite)
        - PostgreSQL(pgsql)
    * _QUERY アノテーションに対応しました。
    * _SQL アノテーションに対応しました。
    * S2Dao_AbstractDaoを用いてEntityManagerに対応しました。
    * SQL コメント ELSE に対応しました。

    * S2DaoClassLoader を修正しました。
    * SQL コメントに関する処理を修正しました。
    * プリペアステートメントに関する処理を修正しました。
    * ResultSetHandler に関する処理を修正しました。

    * 各クラス及びファイルに S2Dao_ のプレフィックスを付けました。
    * __autoload()関数内に S2DaoClassLoader を含めなくてもよいように変更しました。
    * Array_ メソッドの戻り値を ArrayObject から array() に変更しました。
    * SSRMessages.propertiesを削除しメッセージファイルは DaoMessages.properties に変更しました。

    * 利用していないいくつかのファイルを削除しました。

2005-12-06 nowel <nowel@xole.net>

    * _SQL アノテーションに対応しました。

    * src/example/example.dicon.xml を dao.dicon と pdo.dicon に分割しました。
        dao.dicon では S2Dao.PHP5 で必要なものが記述されています。
        pdo.dicon では データベース接続に必要な情報が記述されています。
        src/s2dao.php5/dao.dicon で %PDO_DICON% で pdo.dicon ファイルをincludeしているので
        定数 PDO_DICON を設定する必要があります。

        ex) define("PDO_DICON", dirname(__FILE__) . "/pdo.dicon");

2005-12-05 nowel <nowel@xole.net>

    * fix - dbms/S2Dao_pgsql.class.php
            プライマリーキー取得のSQLを変更しました。

    * S2Dao_Dbms のインタフェースに以下を設定しました。
        - function getTableSql();
            テーブル一覧を取得するSQLをDBMS毎に発行します。
        - function getTableInfoSql();
            テーブル情報(カラム名など)を取得するSQLをDBMS毎に発行します。
        - function getPrimaryKeySql();
            プライマリーキーを取得するSQLをDBMS毎に発行します。

2005-12-02 nowel <nowel@xole.net>

    * fix - S2Dao_DaoMetaDataImpl

    * PDO 上での SQLite, PostgreSQL の動作を確認しました。

    * PostgreSQL の プレフィックスを postgre から pgsql へ変更しました。
