@@ -3,40 +3,48 @@
 
     <taskdef name="phar" classname="src.phing.task.PHPArchiveTask" />
     <typedef name="pharfileset" classname="src.phing.types.PharFileSet" />
-    <typedef name="ignorefileset" classname="src.phing.types.IgnoreFileSet" />
+    <!-- <typedef name="ignorefileset" classname="src.phing.types.IgnoreFileSet" /> -->
 
     <target name="properties">
-        <property name="package.name" value="s2dao.php5" />
-        <property name="package.version" value="1.0.0-beta3" />
-        <property name="src" value="./src/${package.name}" override="true" />
-        <property name="build" value="./build" />
+        <property name="project.name" value="${phing.project.name}" />
+        <property name="project.postfix" value="1.0.0-beta3" />
+        <property name="project.src.dir" value="${project.basedir}/src/${project.name}" />
+        <property name="project.build.dir" value="${project.basedir}/build" />
         <property name="phar.inifile" value="S2DaoClassLoader.class.php" />
         <property name="phar.usegzip" value="true" />
-        <property name="phar.filename" value="${package.name}-${package.version}.phar" override="true" />
-        <property name="phar.fullpath" value="${build}/${phar.filename}" override="true" />
+        <property name="phar.file.name" value="${project.name}-${project.postfix}.phar" />
+        <property name="phar.file.path" value="${project.build.dir}/${phar.file.name}" />
     </target>
 
     <target name="prepare" depends="properties">
-        <mkdir dir="${build}" />
+        <mkdir dir="${project.basedir}/build" />
     </target>
 
     <target name="package" depends="prepare" description="make phar file">
         <echo msg="Makeing PHP Archive Files..." />
-        <phar pharfile="${phar.fullpath}" inifile="${phar.inifile}" usegzip="${phar.usegzip}">
-            <pharfileset prefix="${package.name}" dir="${src}">
+        <phar pharfile="${phar.file.path}" inifile="${phar.inifile}" usegzip="${phar.usegzip}">
+            <pharfileset prefix="${project.name}" dir="${project.src.dir}">
                 <include name="**" />
+                <exclude name="**/*.core.classes.php" />
+                <exclude name="**examples/**" />
+                <exclude name="**phing/**" />
             </pharfileset>
-            <ignorefileset dir="${src}">
-                <include name="**/*.core.classes.php" />
-                <include name="**examples/**" />
-                <include name="**phing/**" />
-            </ignorefileset>
+            <filterchain>
+                <tabtospaces tablength="0" />
+                <striplinebreaks />
+                <stripphpcomments />
+                <striplinecomments>
+                    <comment value="#" />
+                    <comment value="--" />
+                    <comment value="//" />
+                </striplinecomments>
+            </filterchain>
         </phar>
     </target>
 
     <target name="clean" depends="prepare" description="clean up">
         <echo msg="Cleaning up..." />
-        <delete dir="${build}" />
+        <delete dir="${project.build.dir}" />
     </target>
 
 </project>
